...
        topBar = {
            TopAppBar(
                title = { 
                    Text(
                        text = stringResource(R.string.address_book),
                        style = MaterialTheme.typography.headlineMedium,
                        modifier = Modifier.testTag("address_book_title")
                    )
                },
                actions = {
                    IconButton(onClick = { 
                        isSearchVisible = !isSearchVisible
                        if (!isSearchVisible) {
...
